Exploration des données et début de la PCA

--- a/darkurl.ipynb
+++ b/darkurl.ipynb
@@ -23,6 +23,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de6f9c1c",
+   "metadata": {},
+   "source": [
+    "Ce dataset est un ensemble d'url qui sont labellisés. Si le label vaut 1, l'url est dangereux, si il vaut -1, il ne l'est pas. L'objectif sera de faire un algorithme de classification des url en apprenant sur le dataset disponible. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c8f0d314",
    "metadata": {},
    "source": [
@@ -33,12 +41,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c2fc90f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be48e021",
+   "metadata": {},
+   "source": [
+    "Nous notons que les fichiers de données sont sous la forme de matrices sparse. Cela signifie que seules les valeurs non nulles sont gardées en mémoire. \n",
+    "Cela permet d'épargner des erreurs de mémoire. \n",
+    "\n",
+    "Le fichier features contient des numéros de features qui sont moins souvent nuls que les autres. Ils pourraient aussi être des délimiteurs de groupe\n",
+    "de features appartenant à la même catégorie. \n",
+    "\n",
+    "Nous codons une fonction de prévisualisation pour mieux comprendre la structure des données en les transformant en un dataframe. Pour la suite, \n",
+    "nous resterons dans le format de données initial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d14ca1d",
+   "metadata": {},
+   "source": [
+    "**Fonction de prévisualisation** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa4f1581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_svmlight_file\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def preview_data(day, nb_lines, nb_cols, random = True):\n",
+    "    # Si random est laissé tel quel, une valeur au hasard \n",
+    "    # est prise pour la première ligne et la première colonne à afficher\n",
+    "\n",
+    "    path =f\"url_svmlight/url_svmlight/Day{day}.svm\"\n",
+    "    X, y = load_svmlight_file(path)\n",
+    "\n",
+    "    if random == True:\n",
+    "        start_line = np.random.randint(0, len(y)-nb_lines)\n",
+    "        start_col = np.random.randint(0,X.shape[1])\n",
+    "    else : \n",
+    "        start_line = int(input(\"Première ligne à afficher : \"))\n",
+    "        start_col = int(input(\"Première colonne à afficher : \"))\n",
+    "    \n",
+    "    label_list = []\n",
+    "    for i in range(start_col, start_col+nb_cols):\n",
+    "        label_list.append(i)\n",
+    "\n",
+    "    X_df = pd.DataFrame(X[start_line: start_line+nb_lines, start_col: start_col+nb_cols].toarray(), columns=label_list)\n",
+    "    y_df = pd.DataFrame(y[start_line: start_line+nb_lines], columns=['label'])\n",
+    "\n",
+    "    data = pd.concat([X_df, y_df], axis=1)\n",
+    "    return data\n",
+    "\n",
+    "# preview_data(17, 10, 10, random=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7844f418",
+   "metadata": {},
+   "source": [
+    "**Visualisations grahiques** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69cf6aee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scatter_plot(day, feature_x, feature_y): \n",
+    "    path =f\"url_svmlight/url_svmlight/Day{day}.svm\"\n",
+    "    X, y = load_svmlight_file(path)\n",
+    "\n",
+    "    X = X[0:100,:100].toarray()\n",
+    "    plt.figure()\n",
+    "    plt.grid(alpha=0.2)\n",
+    "    sc = plt.scatter(X[:,feature_x], X[:,feature_y], c=y[0:100], cmap=\"viridis\")\n",
+    "    plt.xlabel(f'Feature {feature_x}')\n",
+    "    plt.ylabel(f'Feature {feature_y}')\n",
+    "    \n",
+    "\n",
+    "    cbar = plt.colorbar(sc)\n",
+    "    cbar.set_label(\"Label\")\n",
+    "    plt.show()\n",
+    "\n",
+    "scatter_plot(22,4,3)"
    ]
   },
   {
@@ -53,12 +157,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "971170d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Code"
+    "#Code\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c4ebb12",
+   "metadata": {},
+   "source": [
+    "Nous commençons par une pca brute pour voir ce que cela peut donner. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26c0ed61",
+   "metadata": {},
+   "source": [
+    "**PCA**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c802d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "\n",
+    "X, y = load_svmlight_file('url_svmlight/url_svmlight/Day96.svm')\n",
+    "\n",
+    "svd = TruncatedSVD(n_components=10)\n",
+    "X_svd = svd.fit_transform(X)\n",
+    "# print(X_svd.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d021cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# svd.explained_variance_ratio_\n",
+    "plt.scatter(X_svd[:1000,0], X_svd[:1000,1], c=y[:1000], cmap='coolwarm', s=10, alpha=0.6)\n",
+    "plt.xlabel('Composante 1')\n",
+    "plt.ylabel('Composante 2')\n",
+    "plt.title('Projection des URLs sur les 2 premières composantes SVD')\n",
+    "plt.colorbar(label='label')\n",
+    "plt.show()"
    ]
   },
   {
@@ -73,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "54daede0",
    "metadata": {},
    "outputs": [],
@@ -93,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2cb813cc",
    "metadata": {},
    "outputs": [],
@@ -113,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0a89a8cd",
    "metadata": {},
    "outputs": [],
@@ -124,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env_test",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
