Validation croisée sur l'échantillon réduit (10 jours),  test d'un svm avec kernel rbf (plus précis, mais plus long par rapport au linéaire), ajout de commentaires sur la suite

--- a/darkurl.ipynb
+++ b/darkurl.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "aa4f1581",
    "metadata": {},
    "outputs": [
@@ -105,16 +105,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>230361</th>\n",
-       "      <th>230362</th>\n",
-       "      <th>230363</th>\n",
-       "      <th>230364</th>\n",
-       "      <th>230365</th>\n",
-       "      <th>230366</th>\n",
-       "      <th>230367</th>\n",
-       "      <th>230368</th>\n",
-       "      <th>230369</th>\n",
-       "      <th>230370</th>\n",
+       "      <th>1136653</th>\n",
+       "      <th>1136654</th>\n",
+       "      <th>1136655</th>\n",
+       "      <th>1136656</th>\n",
+       "      <th>1136657</th>\n",
+       "      <th>1136658</th>\n",
+       "      <th>1136659</th>\n",
+       "      <th>1136660</th>\n",
+       "      <th>1136661</th>\n",
+       "      <th>1136662</th>\n",
        "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -229,7 +229,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -264,32 +264,32 @@
        "</div>"
       ],
       "text/plain": [
-       "   230361  230362  230363  230364  230365  230366  230367  230368  230369  \\\n",
-       "0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "1     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "2     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "3     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "4     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "5     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "6     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "7     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "8     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
-       "9     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0   \n",
+       "   1136653  1136654  1136655  1136656  1136657  1136658  1136659  1136660  \\\n",
+       "0      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "1      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "2      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "3      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "4      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "5      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "6      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "7      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "8      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
+       "9      0.0      0.0      0.0      0.0      0.0      0.0      0.0      0.0   \n",
        "\n",
-       "   230370  label  \n",
-       "0     0.0   -1.0  \n",
-       "1     0.0   -1.0  \n",
-       "2     0.0   -1.0  \n",
-       "3     0.0   -1.0  \n",
-       "4     0.0   -1.0  \n",
-       "5     0.0   -1.0  \n",
-       "6     0.0   -1.0  \n",
-       "7     0.0    1.0  \n",
-       "8     0.0   -1.0  \n",
-       "9     0.0   -1.0  "
+       "   1136661  1136662  label  \n",
+       "0      0.0      0.0   -1.0  \n",
+       "1      0.0      0.0   -1.0  \n",
+       "2      0.0      0.0   -1.0  \n",
+       "3      0.0      0.0   -1.0  \n",
+       "4      0.0      0.0   -1.0  \n",
+       "5      0.0      0.0   -1.0  \n",
+       "6      0.0      0.0   -1.0  \n",
+       "7      0.0      0.0   -1.0  \n",
+       "8      0.0      0.0   -1.0  \n",
+       "9      0.0      0.0   -1.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "7b06e9b3",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "268b4be9",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "0316ae51",
    "metadata": {},
    "outputs": [],
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "06cbc601",
    "metadata": {},
    "outputs": [
@@ -772,6 +772,116 @@
     "print('Précision de : ', accuracy_score(y_test, y_pred))\n",
     "print(\"\\nRésumé de classification:\\n\", classification_report(y_test, y_pred))\n",
     "print(\"\\nMatrice de confusion:\\n\", confusion_matrix(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c7f070",
+   "metadata": {},
+   "source": [
+    "Tentative de validation croisée : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d7d2c4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "model = make_pipeline(\n",
+    "    MaxAbsScaler(),           # scaler rapide pour sparse matrices\n",
+    "    LinearSVC(\n",
+    "        dual=False,           # plus rapide si n_samples > n_features\n",
+    "        max_iter=3000,        # limite d'itérations\n",
+    "        tol=1e-3,             # tolérance plus élevée pour converger plus vite\n",
+    "        random_state=42\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "805b84f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores sur les folds : [0.96865306 0.96973469 0.97681633 0.9787551 ]\n",
+      "Précision moyenne : 0.9734897959183674\n",
+      "Écart-type : 0.004367036990718132\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(model, X_all, y_all, cv=4, n_jobs=-1)\n",
+    "\n",
+    "print(\"Scores sur les folds :\", scores)\n",
+    "print(\"Précision moyenne :\", np.mean(scores))\n",
+    "print(\"Écart-type :\", np.std(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f10ad290",
+   "metadata": {},
+   "source": [
+    "**SVM avec un kernel non linéaire**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "37b7ad3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores CV : [0.9751305  0.97503975 0.97512975]\n",
+      "Précision moyenne : 0.975099999695023\n",
+      "Écart-type : 4.260377567128916e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "# Pipeline pour gérer le sparse matrix\n",
+    "model = make_pipeline(\n",
+    "    MaxAbsScaler(),                # scaler rapide compatible sparse\n",
+    "    SVC(kernel='rbf', C=1.0, gamma='scale', random_state=42)  # kernel RBF\n",
+    ")\n",
+    "\n",
+    "# Cross-validation sur un échantillon réduit pour tester\n",
+    "sample_idx = np.random.choice(X_all.shape[0], size=100_000, replace=False)\n",
+    "X_sample = X_all[sample_idx]\n",
+    "y_sample = y_all[sample_idx]\n",
+    "\n",
+    "scores = cross_val_score(model, X_sample, y_sample, cv=3, n_jobs=-1)\n",
+    "print(\"Scores CV :\", scores)\n",
+    "print(\"Précision moyenne :\", np.mean(scores))\n",
+    "print(\"Écart-type :\", np.std(scores))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1dcd8f4",
+   "metadata": {},
+   "source": [
+    "Nous constatons une légère amélioration de la précision obtenue avec un kernek rbf. Néanmoins, le temps de calcul est nettement plus long. Vu la taille du jeu de données qu'on souhaite tester, il n'est pas envisageable de prendre le rbf tel quel. Il pourrait convenir si on avait moins de features. Mais, dans ce cas, n'aurait-on pas un soucis de nombre de samples par rapport au nombre de features ? \n",
+    "\n",
+    "Etant donné qu'on obtient des résultats satisfaisants avec le svm linéaire, une bonne précision, sans surapprentissage (nous l'avons vérifié avec la validation croisée), il paraît assez optimal de continuer avec le svm linéaire. Quel paramètre peut-on ajuster pour la suite ? \n",
+    "\n",
+    "Peut-être faut-il interroger le nombre de features sélectionné avec le critère sur la variance ? Nous souhaitions aussi implémenter une autre technique de sélection de variable consistant à évaluer la pertinence d'une feature sur la prédiction de classe du sample (avec un test du chi2 par exemple). "
    ]
   },
   {
