Création du fichier url pour mettre au propre nos deux fichiers en agençant les codes de thibault sur le feature engineering et le test des méthodes d'apprentissage, sélection de svm linéaire, ajout de commentaires, finetuning débuté sur le paramètre C

--- a/darkurl.ipynb
+++ b/darkurl.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa4f1581",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,16 @@
     "from sklearn.datasets import load_svmlight_file\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95710c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def preview_data(day, nb_lines, nb_cols, random = True):\n",
     "    # Si random est laissé tel quel, une valeur au hasard \n",
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b06e9b3",
    "metadata": {},
    "outputs": [],
@@ -363,6 +372,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4b8bdb4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m files \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m([os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, f) \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(data_dir)])[:\u001b[38;5;241m2\u001b[39m]  \u001b[38;5;66;03m# ou plus\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Lecture en une seule fois : bien plus rapide que 10 load_svmlight_file\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m X_all, y_all \u001b[38;5;241m=\u001b[39m load_svmlight_files(files, n_features\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3_300_000\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Si load_svmlight_files renvoie plusieurs sorties, les empiler :\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(X_all, \u001b[38;5;28mtuple\u001b[39m):\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from sklearn.datasets import load_svmlight_files\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "from scipy.sparse import vstack\n",
+    "\n",
+    "data_dir = \"url_svmlight/url_svmlight\"\n",
+    "\n",
+    "# Liste complète des chemins\n",
+    "files = sorted([os.path.join(data_dir, f) for f in os.listdir(data_dir)])[:2]  # ou plus\n",
+    "\n",
+    "# Lecture en une seule fois : bien plus rapide que 10 load_svmlight_file\n",
+    "X_all, y_all = load_svmlight_files(files, n_features=3_300_000)\n",
+    "\n",
+    "# Si load_svmlight_files renvoie plusieurs sorties, les empiler :\n",
+    "if isinstance(X_all, tuple):\n",
+    "    X_all = vstack(X_all)\n",
+    "    y_all = np.hstack(y_all)\n",
+    "\n",
+    "# Sélection de variance\n",
+    "selector = VarianceThreshold(threshold=0.01)\n",
+    "X_reduced = selector.fit_transform(X_all)\n",
+    "\n",
+    "keep_mask = selector.get_support()\n",
+    "kept_indices = np.where(keep_mask)[0]\n",
+    "\n",
+    "print(f\"{keep_mask.sum()} variables conservées sur {keep_mask.size}\")\n",
+    "\n",
+    "# Si tu veux conserver le pourcentage ou l’importance\n",
+    "variances = selector.variances_\n",
+    "df_keep = pd.DataFrame({\n",
+    "    'column_index': np.arange(len(variances)),\n",
+    "    'variance': variances,\n",
+    "    'kept': keep_mask\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7b1642bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_svmlight_file\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "data_dir = \"url_svmlight/url_svmlight\"\n",
+    "files = sorted([os.path.join(data_dir, f) for f in os.listdir(data_dir)])[:20]\n",
+    "\n",
+    "max_features = 3_300_000\n",
+    "mean_ = np.zeros(max_features)\n",
+    "mean_sq_ = np.zeros(max_features)\n",
+    "n_total = 0\n",
+    "\n",
+    "for file in files:\n",
+    "    X, _ = load_svmlight_file(file, n_features=max_features)\n",
+    "    n_samples = X.shape[0]\n",
+    "    mean_ += X.mean(axis=0).A1 * n_samples\n",
+    "    mean_sq_ += (X.power(2).mean(axis=0).A1) * n_samples\n",
+    "    n_total += n_samples\n",
+    "\n",
+    "mean_ /= n_total\n",
+    "mean_sq_ /= n_total\n",
+    "variances = mean_sq_ - mean_**2\n",
+    "keep_mask = variances > 0.01\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e5e194ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False ... False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(keep_mask)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "03e9de58",
    "metadata": {},
@@ -372,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "268b4be9",
    "metadata": {},
    "outputs": [],
@@ -537,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0316ae51",
    "metadata": {},
    "outputs": [],
@@ -818,6 +932,116 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a5955bd",
+   "metadata": {},
+   "source": [
+    "**Inférence Bayésienne**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e9b2a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9035969387755102\n",
+      "AUC: 0.9609527940606886\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "\n",
+    "# alpha = 1 correspond à un prior Beta(1,1)\n",
+    "model = BernoulliNB(alpha=1.0, binarize=None)  # binarize=None car tes features sont déjà binaires\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"AUC:\", roc_auc_score(y_test, y_proba))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31e00140",
+   "metadata": {},
+   "source": [
+    "Approche par batch "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a9ea842",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.8982\n",
+      "AUC : 0.9589\n",
+      "Matrice de confusion :\n",
+      " [[12383   513]\n",
+      " [ 1522  5582]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from sklearn.datasets import load_svmlight_file\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, roc_auc_score\n",
+    "import scipy.sparse as sp\n",
+    "\n",
+    "data_dir = \"url_svmlight/url_svmlight\"\n",
+    "max_features = 3_300_000\n",
+    "keep_mask = np.array(keep_mask)\n",
+    "selected_columns = np.where(keep_mask)[0]\n",
+    "\n",
+    "\n",
+    "# Modèle\n",
+    "model = BernoulliNB(alpha=1.0)\n",
+    "classes = np.array([-1,1])\n",
+    "\n",
+    "# Split train/test\n",
+    "# Ici, on réserve le dernier fichier pour test\n",
+    "all_files = sorted([os.path.join(data_dir,f) for f in os.listdir(data_dir)])[:20]\n",
+    "train_files = all_files[:-1]\n",
+    "test_file = all_files[-1]\n",
+    "\n",
+    "# --- Entraînement batch par batch ---\n",
+    "for file in train_files:\n",
+    "    X, y = load_svmlight_file(file, n_features=max_features)\n",
+    "    X_filtered = X[:, selected_columns]\n",
+    "    model.partial_fit(X_filtered, y, classes=classes)\n",
+    "\n",
+    "# --- Evaluation sur le fichier test ---\n",
+    "X_test, y_test = load_svmlight_file(test_file, n_features=max_features)\n",
+    "X_test_filtered = X_test[:, selected_columns]\n",
+    "\n",
+    "y_pred = model.predict(X_test_filtered)\n",
+    "y_proba = model.predict_proba(X_test_filtered)[:,1]\n",
+    "\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "auc = roc_auc_score(y_test, y_proba)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy : {acc:.4f}\")\n",
+    "print(f\"AUC : {auc:.4f}\")\n",
+    "print(\"Matrice de confusion :\\n\", cm)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0662aa27",
    "metadata": {},
    "source": [
@@ -956,7 +1180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env_test",
    "language": "python",
    "name": "python3"
   },
@@ -970,7 +1194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
