Tuning des autres paramètres que C, attention warning de convergence

--- a/url_machine_learning.ipynb
+++ b/url_machine_learning.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d658b472",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "357852a6",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9e7b6504",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3bebbb92",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "110dda6c",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "452cdc38",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
      "text": [
       "\n",
       "--- Évaluation du modèle ---\n",
-      "Temps d'exécution : 2.13 s\n",
+      "Temps d'exécution : 1.30 s\n",
       "Précision de :  0.9791023489932886\n",
       "\n",
       "Résumé de classification:\n",
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fa274ed3",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1388,7 @@
      "text": [
       "\n",
       "--- Validation croisée ---\n",
-      "Temps d'exécution : 28.60 s\n",
+      "Temps d'exécution : 24.82 s\n",
       "Scores individuels : [0.98079077 0.98096682 0.98082211]\n",
       "Moyenne de précision : 0.9809 ± 0.0001\n"
      ]
@@ -1500,7 +1500,15 @@
    "id": "398868ca",
    "metadata": {},
    "source": [
-    "**L'hyperparamètre $C$**"
+    "### L'hyperparamètre $C$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da08a65f",
+   "metadata": {},
+   "source": [
+    "**Description**"
    ]
   },
   {
@@ -1519,6 +1527,14 @@
     "Rappelons ce que contrôle $C$ dans l'algorithme. $C$ est un terme de pénalisation des erreurs de classifications : \n",
     "- si $C$ est petit, des erreurs de classifications sont tolérées. La marge du svm est plus large, ce qui en fait un algorithme avec une capacité de généralisation plus importante. \n",
     "- si $C$ est grand, moins d'erreurs de classifications sont tolérées car elles sont pénalisées plus sévèrement dans l'algorithme d'optimisation constitutif du svm. Donc, la marge est plus réduite. La précision est normalement plus grande, mais il y a un risque de surapprentissage plus élevé puisqu'on force l'algorithme à potentiellement fixer les hyperplans séparateurs sur des données qui pourraient être du bruit. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5cd82f1",
+   "metadata": {},
+   "source": [
+    "**Tuning sur dataset restreint**"
    ]
   },
   {
@@ -1634,6 +1650,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bed7f727",
+   "metadata": {},
+   "source": [
+    "**Application au dataset complet**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "79144310",
@@ -1732,6 +1756,193 @@
    "metadata": {},
    "source": [
     "On constate que la précision moyenne sur les folds a diminué de l'ordre de $0,01\\%$. Ceci est cohérent avec ce qu'attendu, nous avons augmenté la précision sur notre jeu de données d'entraînement, mais cela nous a coûté un peu de capacité de généralisation. Un compromis doit être fait entre biais et variance et $C=0,27$ semble être un bon choix de ce point de vu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f9dded6",
+   "metadata": {},
+   "source": [
+    "### Les autres hyperparamètres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3b4459e",
+   "metadata": {},
+   "source": [
+    "**Fonction de perte `loss`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86001b97",
+   "metadata": {},
+   "source": [
+    "Elle définit l'erreur du modèle. Par défaut svm linéaire utilise `squared_hinge`. On pourrait utiliser `hinge` simple pour voir si cela améliore les performances du svm linéaire. Une loss en hinge est censée être plus robuste face aux outliers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00666b57",
+   "metadata": {},
+   "source": [
+    "**Paramètre `dual`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656ad5e7",
+   "metadata": {},
+   "source": [
+    "Il vaut `True` par défaut, mais en le mettant à `False`, les performances pourraient être meilleures, car c'est particulièrement adapté pour des jeux de données un nombre de samples supérieur aux features, ce qui est notre cas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c63543",
+   "metadata": {},
+   "source": [
+    "**Type de régularisation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "017cd922",
+   "metadata": {},
+   "source": [
+    "Il est possible de choisir une régularisation l1 ou l2. Nous resterons sur l2 car cela offre une plus grande stabilité."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9af276b",
+   "metadata": {},
+   "source": [
+    "**Test sur la combinaison de ces nouveaux paramètres**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f6ea224",
+   "metadata": {},
+   "source": [
+    "Nous gardons le $C$ trouvé précédemment, mais nous ajoutons les nouveaux paramètres cités plus haut. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8716a6a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Évaluation du modèle ---\n",
+      "Temps d'exécution : 18.48 s\n",
+      "Précision de :  0.9814345637583892\n",
+      "\n",
+      "Résumé de classification:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "        -1.0       0.99      0.98      0.99     77559\n",
+      "         1.0       0.97      0.98      0.97     41641\n",
+      "\n",
+      "    accuracy                           0.98    119200\n",
+      "   macro avg       0.98      0.98      0.98    119200\n",
+      "weighted avg       0.98      0.98      0.98    119200\n",
+      "\n",
+      "\n",
+      "Matrice de confusion:\n",
+      " [[76377  1182]\n",
+      " [ 1031 40610]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/adrie/miniconda3/envs/env_test/lib/python3.10/site-packages/sklearn/svm/_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "\n",
+    "svm = LinearSVC(random_state=42, C=0.27, loss='hinge', penalty='l2')\n",
+    "svm.fit(X_train_full, y_train_full)\n",
+    "y_pred = svm.predict(X_test)\n",
+    "\n",
+    "end = time.time()\n",
+    "\n",
+    "print(\"\\n--- Évaluation du modèle ---\")\n",
+    "print(f\"Temps d'exécution : {end - start:.2f} s\")\n",
+    "print('Précision de : ', accuracy_score(y_test, y_pred))\n",
+    "print(\"\\nRésumé de classification:\\n\", classification_report(y_test, y_pred))\n",
+    "print(\"\\nMatrice de confusion:\\n\", confusion_matrix(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "614c714a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/adrie/miniconda3/envs/env_test/lib/python3.10/site-packages/sklearn/svm/_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "/home/adrie/miniconda3/envs/env_test/lib/python3.10/site-packages/sklearn/svm/_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "/home/adrie/miniconda3/envs/env_test/lib/python3.10/site-packages/sklearn/svm/_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Validation croisée ---\n",
+      "Temps d'exécution : 13.69 s\n",
+      "Scores individuels : [0.98128783 0.98146389 0.98151422]\n",
+      "Moyenne de précision : 0.9814 ± 0.0001\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "\n",
+    "# Initialisation du modèle\n",
+    "svm = LinearSVC(random_state=42, C=0.27, loss='hinge', penalty='l2')\n",
+    "\n",
+    "# Définir une validation croisée stratifiée (préserve la proportion des classes)\n",
+    "cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Lancer la validation croisée\n",
+    "scores = cross_val_score(svm, X_train_full, y_train_full, cv=cv, scoring='accuracy', n_jobs=-1)\n",
+    "\n",
+    "end = time.time()\n",
+    "print(\"\\n--- Validation croisée ---\")\n",
+    "print(f\"Temps d'exécution : {end - start:.2f} s\")\n",
+    "print(f\"Scores individuels : {scores}\")\n",
+    "print(f\"Moyenne de précision : {np.mean(scores):.4f} ± {np.std(scores):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12cf881c",
+   "metadata": {},
+   "source": [
+    "On constate une amélioration de la précision et de la moyenne de la précision sur les folds. Ces paramètres ont donc effectivement un peu amlioré la performance de notre algorithme. \n",
+    "\n",
+    "Néanmoins, nous avons un warning de convergence, je sais pas trop si c'est une bonne chose, je pense que non."
    ]
   },
   {
