--- a/url_machine_learning_v2.ipynb
+++ b/url_machine_learning_v2.ipynb
@@ -1954,6 +1954,26 @@
     "# Partie 5 : Conclusions\n",
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32572ebc",
+   "metadata": {},
+   "source": [
+    "Pour conclure, dans ce notebook nous devions entrainer un modèle pour classifier les url entre sain et malsain. \n",
+    "\n",
+    "C'est une tâche de machine learning supervisée puisque les données sont labelisées (-1 pour sain/+1 pour malsain).\n",
+    "\n",
+    "Nous avons commencé par mettre en place un feature engineering pour extraire les features utiles à l'entrainement du modèle de machine learning. \n",
+    "\n",
+    "Puis nous avons entrainé et testé plusieurs algorithmes de ML (svm, arbres, naive bayes, Gaussian processes).\n",
+    "\n",
+    "Grâce à nos résultats, nous avons montré qu'un simple SVM linéaire suffit à obtenir une bonne précision (0.98). \n",
+    "\n",
+    "Ensuite nous avons fine tunné les hyperparamètres du SVM et notamment C. Nous avons pu améliorer notre précision de 0.001%.\n",
+    "\n",
+    "Enfin, pour améliorer notre travail si nous avions accès aux personnes \"métier\", nous aurions pu leur demandé comment ils ont fait pour passer d'un texte url à un vecteur représentant nos features dans la matrice svm. En effet, si nous comprenons mieux à quelles parties de l'url font référence les feature, nous pourrions mieux les filtrer lors de notre feature engineering."
+   ]
   }
  ],
  "metadata": {
