dernières modifications - version finale

--- a/url_machine_learning.ipynb
+++ b/url_machine_learning.ipynb
@@ -979,7 +979,7 @@
    "id": "aaae6802",
    "metadata": {},
    "source": [
-    "Même pas essayé parce que trop long par les exemples de ton fichiers, en plus pas précis."
+    "Testé mais trop long."
    ]
   },
   {
